// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatasetCard.vue should add class selected to the card when the property isSelected is true 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row dataset-row--selected dataset-row--can-hover">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 title="untitled_table_13" class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <!---->
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell">
    <datasetquickactions-stub dataset="[object Object]" class="dataset--quick-actions"></datasetquickactions-stub>
  </div>
</a>
`;

exports[`DatasetCard.vue should remove the selection checkbox add the name of the owner if the dataset is shared 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row dataset-row--can-hover">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 title="untitled_table_13" class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <div class="row-metadataContainer">
      <!---->
      <div class="row-metadata"><img svg-inline="" src="../../assets/icons/datasets/user.svg" class="icon-metadata"> <span class="text is-small is-txtSoftGrey">cdb</span></div>
    </div>
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell">
    <datasetquickactions-stub dataset="[object Object]" isshared="true" class="dataset--quick-actions"></datasetquickactions-stub>
  </div>
</a>
`;

exports[`DatasetCard.vue should render correct contents 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row dataset-row--can-hover">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 title="untitled_table_13" class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <!---->
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell">
    <datasetquickactions-stub dataset="[object Object]" class="dataset--quick-actions"></datasetquickactions-stub>
  </div>
</a>
`;

exports[`DatasetCard.vue should render multiple tags 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row dataset-row--can-hover">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 title="untitled_table_13" class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <div class="row-metadataContainer">
      <div class="row-metadata"><img svg-inline="" src="../../assets/icons/datasets/tag.svg" class="icon-metadata">
        <!---->
        <featuresdropdown-stub list="Hi,Hello,CARTO Rules,Just one more tag here" feature="tag" linkroute="tagSearch"><span class="feature-text text is-small is-txtSoftGrey">4 DatasetCard.tags</span></featuresdropdown-stub>
      </div>
      <!---->
    </div>
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell">
    <datasetquickactions-stub dataset="[object Object]" class="dataset--quick-actions"></datasetquickactions-stub>
  </div>
</a>
`;

exports[`DatasetCard.vue should render tags 1`] = `
<a href="http://example.com/tables/untitled_table_13" class="dataset-row dataset-row--can-hover">
  <div class="dataset-cell cell--start">
    <div class="row-dataType">
      <div class="icon--dataType icon--point"></div>
    </div> <span class="checkbox row-checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
  </div>
  <div class="dataset-cell cell--main">
    <div class="title-container">
      <h3 title="untitled_table_13" class="text is-caption is-txtGrey u-ellipsis row-title">
        untitled_table_13
      </h3> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
    </div>
    <div class="row-metadataContainer">
      <div class="row-metadata"><img svg-inline="" src="../../assets/icons/datasets/tag.svg" class="icon-metadata">
        <ul class="tag-list">
          <li>
            <router-link to="[object Object]" class="text is-small is-txtSoftGrey">Hi</router-link><span class="text is-small is-txtSoftGrey">,&nbsp;</span>
          </li>
          <li>
            <router-link to="[object Object]" class="text is-small is-txtSoftGrey">Hello</router-link><span class="text is-small is-txtSoftGrey">,&nbsp;</span>
          </li>
          <li>
            <router-link to="[object Object]" class="text is-small is-txtSoftGrey">CARTO Rules</router-link>
            <!---->
          </li>
        </ul>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class="dataset-cell cell--large"><span class="text is-small is-txtSoftGrey">DatasetCard.lastUpdated</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">DatasetCard.numberRows</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">34.4 MB</span></div>
  <div class="dataset-cell cell--small"><span class="text is-small is-txtSoftGrey">1 map</span></div>
  <div class="dataset-cell cell--small cell--privacy"><span class="icon icon--privacy icon--private"></span> <span class="text is-small is-txtSoftGrey">DatasetCard.shared.PRIVATE</span></div>
  <div class="dataset-cell">
    <datasetquickactions-stub dataset="[object Object]" class="dataset--quick-actions"></datasetquickactions-stub>
  </div>
</a>
`;
